# ceja

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ceja/: __init__.py  functions.py
tests/: test_ceja.py  test_functions.py  test_readme_examples.py
