[tool.poetry]
name = "ceja"
version = "0.1.0"
description = "PySpark string and phonetic matching"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">2.7"
pyspark = ">2.0.0"
jellyfish = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chispa = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
