[tool.poetry]
name = "ceja"
version = "0.4.0"
description = "PySpark string and phonetic matching"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.5"
jellyfish = "^0.8.2"

[tool.poetry.dev-dependencies]
pyspark = ">2.0.0"
pytest = "3.2.2"
chispa = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
