[tool.poetry]
name = "ceja"
version = "0.5.0"
description = "PySpark string and phonetic matching"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7"
jellyfish = "^0.8.2"
stringzilla = "^3.1.2"

[tool.poetry.dev-dependencies]
pyspark = ">2.0.0"
pytest = "^7.0.0"
chispa = "^0.9.2"
setuptools = "^57.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
